	* #496: Remove deprecated functions in favour of get_session_status()
	* #1112: Fix renaming files in add torrent dialog
	* #1247: Fix deluge-gtk from hanging on shutdown
	* #995: Rewrote tracker_icons
	* Make the distinction between adding to the session new unmanaged torrents and torrents loaded from state. This will break backwards compatability.

==== GtkUI ====
	* Fix uncaught exception when closing deluge in classic mode

==== WebUI ====
	* Migrate to ExtJS 3.1
	* Add gzip compression of HTTP data to the server
	* Improve the efficiency of the TorrentGrid

==== Blocklist ====
	* Implement local blocklist support
	* #861: Pause transfers until blocklist is imported

=== Deluge 1.2.0 - "Bursting like an infected kidney" (10 January 2010) ===
==== Core ====
	* Implement new RPC protocol DelugeRPC replacing XMLRPC
	* Move to a twisted framework
	* Add an 'Error' filter for Trackers to show trackers that currently have a tracker error
	* Use system GeoIP database if available, this is now an optional dependency

==== GtkUI ====
	* Remove SignalReceiver
	* Implemented a cross-platform IPC method thus removing the DBUS dependency
	* Implement a "True" Classic Mode where there is no longer a separate daemon process
	* Add preferences option "Add torrent in paused state"
	* Add tracker icons to the Tracker column
	* Implement #259 show tooltip with country name in the peers tab
	* Add an error category to the tracker sidebar list
	* Add Find More Plugins button to Plugins preference page
	* Fix #518 remove header in add torrent dialog to save vertical space
	* Add a Cache preferences page to adjust cache settings and examine cache status
	* Add ability to rename files prior to adding them
	* Fix shutdown handler with GNOME session manager
	* Allow 4 MiB piece sizes when creating a torrent

==== ConsoleUI ====
	* Changed to use curses for a more interactive client

==== WebUI ====
	* Move over to using Twisted-Web for the webserver.