@@ -10,9 +10,12 @@
 	* #1247: Fix deluge-gtk from hanging on shutdown
 	* #995: Rewrote tracker_icons
 	* Make the distinction between adding to the session new unmanaged torrents and torrents loaded from state. This will break backwards compatability.
+	* Pass a copy of an event instead of passing the event arguments to the event handlers. This will break backwards compatability.
+	* Allow changing ownership of torrents.
 
 ==== GtkUI ====
 	* Fix uncaught exception when closing deluge in classic mode
+	* Allow changing ownership of torrents
 
 ==== WebUI ====
 	* Migrate to ExtJS 3.1
